--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuetify": "^2.0.0",
+    "vuetify-toast-snackbar": "^0.4.3",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
